# ChromBERT-tools

./: .gitignore  README.md  pyproject.toml
chrombert_hf/: __init__.py  convert_to_hf.py  download_data.py
chrombert_hf/ft_model/: __init__.py  basic_model.py  ft_utils.py  general_ft_model.py  gep_ft_model.py  model_config.py  prompt_ft_model.py
chrombert_hf/pretrain_model/: __init__.py  config_chrombert.py  emb_manager.py  model_chrombert.py  utils.py
chrombert_hf/train/: __init__.py  pl_module.py  train_config.py
chrombert_tools/: __init__.py
chrombert_tools/api/: __init__.py  embed_cistrome.py  embed_gene.py  embed_region.py  embed_regulator.py  gene_activity_regression.py  gene_activity_repression.py  infer_ep.py  infer_regulator_network.py  interpret_region_interactions.py  interpret_region_region_interactions.py  interpret_regulator_effects_between_region_groups.py  interpret_regulator_interactions.py  interpret_regulator_regulator_interactions.py  predict_tf_binding.py  region_activity_regression.py  region_function_classification.py
chrombert_tools/cli/: __init__.py  embed_cell_cistrome.py  embed_cell_gene.py  embed_cell_region.py  embed_cell_regulator.py  embed_cistrome.py  embed_gene.py  embed_region.py  embed_region_perturb.py  embed_regulator.py  embed_regulator_cistrome.py  embed_run_result.py  embed_utils.py  find_cell_key_regulator.py  find_context_specific_cofactor.py  find_dirver_in_transition.py  find_dirver_in_transition_dw_benchmark.py  find_driver_in_dual_region.py  find_regulator_context_cofactors.py  impute_cistrome.py  (+33 more)
docs/: Makefile  requirements.txt
(+97 files in other folders)
