[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrombert-tools"
version = "1.0.1"
description = "ChromBERT-tools: A lightweight GitHub toolkit that exposes core ChromBERT functionality through easy-to-use command-line tools (CLI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "nxviz",
    "pybbi",
    "bioframe",
    "jupyter",
    "pyfaidx",
    "ninja",
    "packaging",
    "torch",
    "numpy",
    "pandas",
    "matplotlib",
    "torchinfo",
    "h5py",
    "lightning >= 2.0.0",
    "transformers == 4.28.1",
    "huggingface_hub[cli]",
    "pyarrow",
    "torchvision",
    "tensorboard",
    "scikit-learn",
    "pyBigWig"
]

[project.scripts]
chrombert-tools = "chrombert_tools.cli:cli"
download-data = "chrombert_hf.download_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chrombert_tools*","chrombert_hf*"]